--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -8,7 +8,8 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/colorPrimary">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -21,6 +22,20 @@
         android:layout_weight="1"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/editSearch"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:text="ASMR youtube"
+        android:textSize="20dp"
+        android:textColor="#fff"
+        android:gravity="center"
+        android:background="@color/colorPrimary"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -31,15 +46,16 @@
         android:background="@color/colorPrimary"
         >
 
+
         <ListView
             android:id="@+id/listview1"
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="16dp"
             android:fastScrollEnabled="true"
-            android:listSelector="#2C2A52"
-            android:textColor="#ffffff"></ListView>
+            android:listSelector="#2C2A52">
+
+        </ListView>
 
     </LinearLayout>
 </LinearLayout>
