--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/navigation_alarm"
         android:icon="@drawable/ic_dvr_black_24dp"
-        android:title="List" />
+        android:title="Link" />
 
 </menu>
